# un-system-chart-navigator

./: .copilotignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  clean.sh  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.sh  tsconfig.json  update_data.sh  vercel.json
.github/: copilot-instructions.md
.github/workflows/: deploy_nextjs_to_github_pages.yml  dev_unsystem-dev.yml  fetch_data_from_airtable.yml  main_unsystem.yml  push_to_postgres.yml  verify_entity_links.yml
data/input/: entities.csv  entities.json  input_entities.csv  input_entities.parquet  input_entities.pkl  input_entities_with_meta.csv  un_entities.csv
data/output/: entities.csv  entity_link_verification_results.csv  (+2 more)
docs/: A_RES_80_251.md  MAINTENANCE.md  NOTES.md
public/: budget.json  entities.csv  entities.json  entity_link_verification_results.json  member-states.json  organs.json  un-entities.csv  un-entities.json  un-entities.xlsx
python/: 01-fetch_from_airtable.py  02-process_entities_data.py  03-download_headshots.py  03-process_budget_data.py  04-process_state_data.py  04-push_to_postgres.py  05-process_sdgs.py  fetch_from_airtable.py  get_meta_descriptions.py  process_entities_data.py  pull_from_airtable.py  setup.sh  update_data.sh  utils.py  validate_data.py
scripts/: encrypt-site.js  password-template.html
sql/: entities_schema.sql
src/: API.md  get_entities_data.py
src/lib/: api.ts  (+11 more)
web/: next.config.ts  package-lock.json  package.json
(+298 files in other folders)
