[project]
name = "un-system-chart-navigator"
version = "0.1.0"
description = "Interactively navigate the United Nations System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "joblib>=1.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyairtable>=3.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true
